Deadlock in PyGILState_Ensure during Shader Node, from Python Render #17389

Closed
opened 2008-07-25 15:46:47 +02:00 by Early Ehlinger · 3 comments

Group: V 2.46 release
Resolution: Fixed
Category: Rendering (intern)

%%%I'm tracking an issue for a customer where they are using a halftone shader node, available here: http://gallery.hiddenworlds.org/?action=page&aid=16

On our render farm, we start a render by using python so that we can set output directories and the like first. What this means is that for nearly the entire lifetime of Blender's execution, the function BPY_txt_do_python_Text() is on the stack. This means of course that a lock created by PyGILState_Ensure() is also on the stack, and the corresponding PyGILState_Release() has not yet been called.

Normally, that's not a problem, until you have a scripted texture node in the mix. That's a problem because to call the scripted texture node, Blender goes through node_dynamic_exec_cb(), which also calls PyGILState_Ensure(). Unfortunately for it, the PyGILState is already ensured by the "main" python script, and deadlock occurs.

As a quick hack, I patched up node_dynamic_exec_cb() to eliminate calls to PyGILState_Ensure/_Release, and the deadlock goes away. Unfortunately, this basically means that people using shader nodes are restricted to single-threaded rendering. Is there a better alternative?

%%%

**Group**: V 2.46 release **Resolution**: Fixed **Category**: Rendering (intern) %%%I'm tracking an issue for a customer where they are using a halftone shader node, available here: http://gallery.hiddenworlds.org/?action=page&aid=16 On our render farm, we start a render by using python so that we can set output directories and the like first. What this means is that for nearly the entire lifetime of Blender's execution, the function BPY_txt_do_python_Text() is on the stack. This means of course that a lock created by PyGILState_Ensure() is also on the stack, and the corresponding PyGILState_Release() has not yet been called. Normally, that's not a problem, until you have a scripted texture node in the mix. That's a problem because to call the scripted texture node, Blender goes through node_dynamic_exec_cb(), which also calls PyGILState_Ensure(). Unfortunately for it, the PyGILState is already ensured by the "main" python script, and deadlock occurs. As a quick hack, I patched up node_dynamic_exec_cb() to eliminate calls to PyGILState_Ensure/_Release, and the deadlock goes away. Unfortunately, this basically means that people using shader nodes are restricted to single-threaded rendering. Is there a better alternative? %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.

This task was automatically closed as archived as part of migration, because the project or tracker this task belonged to is no longer active.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#17389
No description provided.